Counter resets after each game. Centered in page

--- a/RPS.css
+++ b/RPS.css
@@ -7,3 +7,20 @@ body,html {
   /* align-content: center; */
 }
 
+/* body {
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+} */
+
+.flex-wrapper {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
+  margin-top: 20vh;
+}
+
+/* .grid-wrapper {
+  grid-row: 2 3;
+} */
+
